force-app/main/default/objects/Property__c/Property__c.object-meta.xml
<CustomObject>
    <description>Master record for a project/property in the portfolio. Everything the after-hours chatbot answers with (specs, files, leads, site visits, follow-up tasks) hangs off this object.</description>
    <label>Property</label>
    <nameField>
        <label>Property Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Properties</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>