force-app/main/default/objects/Property__c/fields/Address__c.field-meta.xml
<CustomField>
    <fullName>Address__c</fullName>
    <description>Full site address of the project, as quoted by the chatbot and used for directions.</description>
    <label>Address</label>
    <type>TextArea</type>
</CustomField>