force-app/main/default/objects/Property__c/fields/City__c.field-meta.xml
<CustomField>
    <fullName>City__c</fullName>
    <description>City the project is located in. Primary filter when a visitor asks "what do you have in ...".</description>
    <label>City</label>
    <length>100</length>
    <type>Text</type>
</CustomField>