force-app/main/default/objects/Property__c/fields/Configurations__c.field-meta.xml
<CustomField>
    <fullName>Configurations__c</fullName>
    <description>All BHK configurations available in the project. Multi-select so one query can answer "do you have a 3 BHK here?".</description>
    <label>Configurations (BHK)</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>1 RK</fullName><default>false</default><label>1 RK</label></value>
            <value><fullName>1 BHK</fullName><default>false</default><label>1 BHK</label></value>
            <value><fullName>2 BHK</fullName><default>false</default><label>2 BHK</label></value>
            <value><fullName>2.5 BHK</fullName><default>false</default><label>2.5 BHK</label></value>
            <value><fullName>3 BHK</fullName><default>false</default><label>3 BHK</label></value>
            <value><fullName>3.5 BHK</fullName><default>false</default><label>3.5 BHK</label></value>
            <value><fullName>4 BHK</fullName><default>false</default><label>4 BHK</label></value>
            <value><fullName>4+ BHK</fullName><default>false</default><label>4+ BHK</label></value>
            <value><fullName>Duplex</fullName><default>false</default><label>Duplex</label></value>
            <value><fullName>Penthouse</fullName><default>false</default><label>Penthouse</label></value>
            <value><fullName>Plot</fullName><default>false</default><label>Plot</label></value>
            <value><fullName>Shop</fullName><default>false</default><label>Shop</label></value>
            <value><fullName>Office Space</fullName><default>false</default><label>Office Space</label></value>
            <value><fullName>Studio</fullName><default>false</default><label>Studio</label></value>
            <value><fullName>Warehouse Unit</fullName><default>false</default><label>Warehouse Unit</label></value>
            <value><fullName>Club Facility</fullName><default>false</default><label>Club Facility</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>