force-app/main/default/objects/Property__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <description>Long-form project narrative (location advantages, developer, USPs). This is the free-text the agent grounds on when the question is not covered by a structured field.</description>
    <label>Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>