force-app/main/default/objects/Property__c/fields/Location__c.field-meta.xml
<CustomField>
    <fullName>Location__c</fullName>
    <description>Geolocation (Latitude/Longitude) of the project. Exposed as Location__Latitude__s and Location__Longitude__s so the agent can run DISTANCE()/GEOLOCATION() "properties near me" queries.</description>
    <label>Location</label>
    <scale>6</scale>
    <type>Location</type>
</CustomField>