force-app/main/default/objects/Property__c/fields/Possession_Date__c.field-meta.xml
<CustomField>
    <fullName>Possession_Date__c</fullName>
    <description>Committed/RERA possession date. Used to answer "when is it ready?" and to sort ready-to-move inventory.</description>
    <label>Possession Date</label>
    <type>Date</type>
</CustomField>