force-app/main/default/objects/Property__c/fields/Price_Max__c.field-meta.xml
<CustomField>
    <fullName>Price_Max__c</fullName>
    <description>Top-end price of the largest configuration in the project. Leave blank for a single-price project.</description>
    <label>Price (Max)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>