force-app/main/default/objects/Property__c/fields/Price_Min__c.field-meta.xml
<CustomField>
    <fullName>Price_Min__c</fullName>
    <description>Starting price of the smallest configuration in the project (all-inclusive base price).</description>
    <label>Price (Min)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>