force-app/main/default/objects/Property__c/fields/Price_Range__c.field-meta.xml
<CustomField>
    <fullName>Price_Range__c</fullName>
    <description>Human-readable price range derived from Price (Min) and Price (Max). This is the string the chatbot quotes, so pricing is never hand-typed into two places.</description>
    <formula>IF(AND(ISBLANK(Price_Min__c), ISBLANK(Price_Max__c)),
  "Price on request",
  IF(BLANKVALUE(Price_Max__c, Price_Min__c) &gt;= 10000000,
    "INR " &amp; TEXT(ROUND(BLANKVALUE(Price_Min__c, Price_Max__c) / 10000000, 2)) &amp;
      IF(OR(ISBLANK(Price_Max__c), Price_Max__c = Price_Min__c),
        " Cr",
        " Cr - " &amp; TEXT(ROUND(Price_Max__c / 10000000, 2)) &amp; " Cr"),
    "INR " &amp; TEXT(ROUND(BLANKVALUE(Price_Min__c, Price_Max__c) / 100000, 2)) &amp;
      IF(OR(ISBLANK(Price_Max__c), Price_Max__c = Price_Min__c),
        " Lakh",
        " Lakh - " &amp; TEXT(ROUND(Price_Max__c / 100000, 2)) &amp; " Lakh")))</formula>
    <formulaTreatBlanksAs>BlankAsBlank</formulaTreatBlanksAs>
    <label>Price Range</label>
    <type>Text</type>
</CustomField>