force-app/main/default/objects/Property__c/fields/Property_Type__c.field-meta.xml
<CustomField>
    <fullName>Property_Type__c</fullName>
    <description>Asset class of the project.</description>
    <label>Property Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>Apartment</fullName><default>true</default><label>Apartment</label></value>
            <value><fullName>Villa</fullName><default>false</default><label>Villa</label></value>
            <value><fullName>Row House</fullName><default>false</default><label>Row House</label></value>
            <value><fullName>Penthouse</fullName><default>false</default><label>Penthouse</label></value>
            <value><fullName>Plot / Land</fullName><default>false</default><label>Plot / Land</label></value>
            <value><fullName>Commercial Office</fullName><default>false</default><label>Commercial Office</label></value>
            <value><fullName>Retail / Shop</fullName><default>false</default><label>Retail / Shop</label></value>
            <value><fullName>Warehouse / Logistics</fullName><default>false</default><label>Warehouse / Logistics</label></value>
            <value><fullName>Club / Recreation</fullName><default>false</default><label>Club / Recreation</label></value>
            <value><fullName>Senior Living</fullName><default>false</default><label>Senior Living</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>