force-app/main/default/objects/Property__c/fields/RERA_Number__c.field-meta.xml
<CustomField>
    <fullName>RERA_Number__c</fullName>
    <description>RERA registration number. Unique and flagged as an external ID so property data can be upserted from the marketing site or a CRM feed without creating duplicates.</description>
    <externalId>true</externalId>
    <label>RERA Number</label>
    <length>50</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>