force-app/main/default/objects/Property__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <description>Construction/availability stage of the project. The chatbot filters out Sold Out inventory before recommending anything.</description>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>Pre-Launch</fullName><default>false</default><label>Pre-Launch</label></value>
            <value><fullName>Under Construction</fullName><default>true</default><label>Under Construction</label></value>
            <value><fullName>Ready to Move</fullName><default>false</default><label>Ready to Move</label></value>
            <value><fullName>Sold Out</fullName><default>false</default><label>Sold Out</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>