force-app/main/default/objects/Property__c/listViews/All_Properties.listView-meta.xml
<ListView>
    <fullName>All_Properties</fullName>
    <columns>NAME</columns>
    <columns>City__c</columns>
    <columns>Property_Type__c</columns>
    <columns>Configurations__c</columns>
    <columns>Price_Range__c</columns>
    <columns>Status__c</columns>
    <columns>Possession_Date__c</columns>
    <columns>RERA_Number__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Properties</label>
</ListView>